[package]
name = "ft-relay"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["json"] }
chrono = "0.4"
clap = { version = "4.5.48", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.28"
config = "0.14.1"
redis = { version = "0.32.7", features = [
    "aio",
    "tokio-comp",
    "connection-manager",
] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
rand = "0.9"

# NEAR - using latest versions (0.18 jsonrpc-client with 0.31 primitives)
near-jsonrpc-client = "0.18"
near-jsonrpc-primitives = "0.31"
near-primitives = "0.31"
near-crypto = "0.31"

[dev-dependencies]
near-sandbox = { version = "0.2.0", features = ["generate"] }
reqwest = { version = "0.12.23", features = ["json"] }
